# robotics_software_engineer

module_1_assignment/: README.md
module_1_assignment/cpp_fundamentals/: CMakeLists.txt  Pointer_robot_location.cpp  gpt_examples.cpp  lib_main_lib.cpp  lib_tutorial.cpp  lib_tutorial.h  namespaces_tutorial.cpp  robot_class.cpp  sensor_reading.cpp  templates_tutorial.cpp
module_1_assignment/task_1/: CMakeLists.txt  main.cpp  robot_class.h
module_1_assignment/task_2/: CMakeLists.txt  robot_class.h
module_1_assignment/task_3/: CMakeLists.txt  lib_sensors.h  main.cpp  robot_class.cpp  robot_class.h
module_2_assignment/: .gitignore  CMakeLists.txt
module_2_assignment/launch/: task_2.launch.py  task_3.launch.py
module_2_assignment/src/task_1/: circle.cpp  turtle_circle.cpp  turtle_circle.h  turtle_pub.cpp  turtle_spiral.h
