cmake_minimum_required(VERSION 3.18)
project(line_following_robot)
find_package(Eigen3 REQUIRED)
find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIR})
include_directories(${OpenCV_INCLUDE_DIR})
include_directories(${Boost_INCLUDE_DIR})
add_executable(line_following_robot lib_main_lib.cpp lib_tutorial.cpp)
add_executable(prikol Pointer_robot_location.cpp)
target_link_libraries(line_following_robot ${OpenCV_LIBS} ${Boost_LIBRARIES})